[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")
game_path = NodePath("../Game")

[node name="Panel" type="Panel" parent="."]
offset_left = 400.0
offset_top = 40.0
offset_right = 680.0
offset_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 270.0
offset_bottom = 460.0

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
text = "Score"

[node name="ScoreValue" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
text = "0"

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer"]
text = "Level"

[node name="LevelValue" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
text = "1"

[node name="LinesLabel" type="Label" parent="Panel/VBoxContainer"]
text = "Lines"

[node name="LinesValue" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
text = "0"

[node name="HoldLabel" type="Label" parent="Panel/VBoxContainer"]
text = "Hold"

[node name="HoldValue" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
text = "-"

[node name="NextLabel" type="Label" parent="Panel/VBoxContainer"]
text = "Next"

[node name="NextValue" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
text = ""

[node name="PauseLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 90.0
offset_top = 250.0
offset_right = 320.0
offset_bottom = 290.0
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="GameOverLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 70.0
offset_top = 250.0
offset_right = 340.0
offset_bottom = 320.0
text = ""
horizontal_alignment = 1
vertical_alignment = 1
visible = false
